--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Michael Okoh</h1>
             <p class="section__text__p2">Frontend Developer</p>
-            <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+            <div class="btn-container"> 
+                <button class="btn btn-color-2" onclick="window.open('./assets/Mike.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href= './#contact'">Contact Info</button>
             </div>
 
@@ -78,7 +78,7 @@
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education Icon" class="icon">
                         <h3>Education</h3>
-                        <p>B.Sc. Bachelors Degree <br>M.Sc. Masters Degree</p>
+                        <p>HND <br>Diploma</p>
                     </div>
                 </div>
 
